[project]
name = "open-groundingdino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.19"
dependencies = [
    "addict>=2.4.0",
    "colorlog>=6.10.1",
    "cython>=3.2.3",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.11",
    "pyyaml>3.10",
    "scipy>=1.13.1",
    "submitit>=1.5.4",
    "supervision==0.6.0",
    "termcolor>=3.1.0",
    "timm>=1.0.22",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.3",
    "yapf==0.40.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 88         # default characters
indent-width = 4
target-version = "py39"  # The minimum Python version to target
src = [".", "groundingdino", "models", "tools", "util"]

[tool.ruff.lint]
select = ["E",   # pycodestyle errors
          "W",   # pycodestyle warnings
          "F",   # flake8
          "D",   # pydocstyle
          "I",   # isort
          # "RET", # flake8-return
          # "RUF", # ruff rules
        ]
ignore = ["E203", "E501", "D10", "D212", "D415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rA -x --doctest-modules --color=yes --cov=inspect_ai"
testpaths = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

[tool.mypy]
python_version = 3.9

